--- a/models/multilingual-sentiment/tokenizer_config.json
+++ b/models/multilingual-sentiment/tokenizer_config.json
@@ -44,6 +44,7 @@
   "clean_up_tokenization_spaces": false,
   "cls_token": "[CLS]",
   "do_lower_case": false,
+  "extra_special_tokens": {},
   "mask_token": "[MASK]",
   "model_max_length": 512,
   "pad_token": "[PAD]",
