--- a/requirements.txt
+++ b/requirements.txt
@@ -10,12 +10,14 @@ fsspec==2025.7.0
 h11==0.16.0
 hf-xet==1.1.8
 httptools==0.6.4
+httpx>=0.27.0
 huggingface-hub==0.34.4
 idna==3.10
 numpy==2.3.2
 packaging==25.0
 pydantic==2.11.7
 pydantic_core==2.33.2
+pytest>=8.0.0
 python-dotenv==1.1.1
 PyYAML==6.0.2
 regex==2025.7.34
