Filter unit tests in CI to avoid external dependencies

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,4 +1,7 @@
 [pytest]
 testpaths = tests
 python_files = test_*.py
-addopts = -v --disable-warnings
+addopts = -m "unit" -v --disable-warnings
+
+markers =
+    unit: tests unitarios que no requieren modelo ni servicios externos
